# MaestroCore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt  manual_http_simple_filelog.c  mbed.md
include/: curl.h  http_client.h  http_parser.h  tcp_client.h
modules/include/: maestromodules.h
modules/include/maestromodules/: curl.h  http_client.h  http_parser.h  linked_list.h  maestromodules.h  scheduler.h  tcp_client.h  thread_pool.h  tls_ca_bundle.h  tls_client.h  tls_config.h  tls_global_ca.h  transport.h
modules/src/: curl.c  http_client.c  http_parser.c  linked_list.c  scheduler.c  tcp_client.c  thread_pool.c  tls_ca_bundle.c  tls_client.c  tls_global_ca.c  transport.c
src/: curl.c  http_client.c  http_parser.c  linked_list.c  tcp_client.c
test/: CMakeLists.txt  cmock_config.yaml  test_http.c  test_thread_pool.c
utils/include/: maestroutils.h
utils/include/maestroutils/: HTTPStatusCodes.h  config_handler.h  error.h  file_logging.h  file_utils.h  http_parser.h  json_utils.h  maestroutils.h  math_utils.h  mbedtls_utils.h  misc_utils.h  string_utils.h  time_utils.h
utils/src/: HTTPStatusCodes.c  config_handler.c  file_logging.c  file_utils.c  http_parser.c  json_utils.c  mbedtls_utils.c  misc_utils.c  string_utils.c  time_utils.c
